@@ -1,5 +1,10 @@
 2025-08-04  Zhengyi Fu  <i@fuzy.me>
 
+	* init.el (+custom-faces): Customize `eat-term-font-0' to use
+	IosevkaTerm.
+
+2025-08-04  Zhengyi Fu  <i@fuzy.me>
+
 	* site-lisp/telega-config.el (telega-emoji-use-images): Set to false.
 
 2025-08-03  Zhengyi Fu  <i@fuzy.me>
